[tool.poetry]
name = "inflam"
version = "0.1.0"
description = "A package to analyse patient inflammation test data"
authors = ["lornasibson <lorna.sibson@ukaea.uk>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools.packages.find]
where = ["inflammation"]
